elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/elk: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
      - env:
        - name: ELASTIC_PASSWORD
        - name: ES_JAVA_OPTS
          value: -Xmx256m -Xms256m
        - name: discovery.type
          value: single-node
        image: elasticsearch
        imagePullPolicy: ""
        name: elasticsearch
        ports:
        - containerPort: 9200
        - containerPort: 9300
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          name: elasticsearch-hostpath0
          readOnly: true
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - hostPath:
          path: /home/kmz/Code/NCL/ncl-elk/elasticsearch/config/elasticsearch.yml
        name: elasticsearch-hostpath0
      - hostPath:
          path: /home/kmz/Code/NCL/ncl-elk
        name: elasticsearch
status: {}
