logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/elk: "true"
        io.kompose.service: logstash
    spec:
      containers:
      - env:
        - name: ELASTIC_PASSWORD
        - name: LS_JAVA_OPTS
          value: -Xmx256m -Xms256m
        image: logstash
        imagePullPolicy: ""
        name: logstash
        ports:
        - containerPort: 5000
        - containerPort: 5000
          protocol: UDP
        - containerPort: 5044
        - containerPort: 5045
        - containerPort: 9600
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/logstash/config
          name: logstash-hostpath0
          readOnly: true
        - mountPath: /usr/share/logstash/pipeline
          name: logstash-hostpath1
          readOnly: true
        - mountPath: /usr/share/java/mysql-connector-java-8.0.20.jar
          name: logstash-hostpath2
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - hostPath:
          path: /home/kmz/Code/NCL/ncl-elk/logstash/config
        name: logstash-hostpath0
      - hostPath:
          path: /home/kmz/Code/NCL/ncl-elk/logstash/pipeline
        name: logstash-hostpath1
      - hostPath:
          path: /home/kmz/Code/NCL/ncl-elk/logstash/jdbc/mysql-connector-java-8.0.20.jar
        name: logstash-hostpath2
status: {}
