kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 5601
  selector:
    io.kompose.service: kibana
status:
  loadBalancer: {}
